TEST: bound bootstrap asynchronous waits